WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
127601
[EFL][WK1] Fix broken rendering while navigating history in EWebLauncher
https://bugs.webkit.org/show_bug.cgi?id=127601
Summary
[EFL][WK1] Fix broken rendering while navigating history in EWebLauncher
Ryuan Choi
Reported
2014-01-24 19:02:03 PST
When scrolled after requested repaints, rendering is broken because of wrong dirty area.
Attachments
Patch
(1.52 KB, patch)
2014-01-24 19:09 PST
,
Ryuan Choi
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ryuan Choi
Comment 1
2014-01-24 19:09:30 PST
Created
attachment 222184
[details]
Patch
Ryuan Choi
Comment 2
2014-01-25 05:48:49 PST
Comment on
attachment 222184
[details]
Patch Thanks.
WebKit Commit Bot
Comment 3
2014-01-25 06:15:19 PST
Comment on
attachment 222184
[details]
Patch Clearing flags on attachment: 222184 Committed
r162762
: <
http://trac.webkit.org/changeset/162762
>
WebKit Commit Bot
Comment 4
2014-01-25 06:15:23 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug