[EFL][WK1] Fix broken rendering while navigating history in EWebLauncher https://bugs.webkit.org/show_bug.cgi?id=127601

Reviewed by Anders Carlsson.

When scrolled after requested repaints, rendering was broken because scrollDelta
changed repaints area.

* ewk/ewk_view.cpp:
(ewk_view_scroll):


Canonical link: https://commits.webkit.org/145627@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@162762 268f45cc-cd09-0410-ab3c-d52691b4dbfc